# symmetric-secret-share

./: .gitignore  README.md  pyproject.toml
docs/: CONTRIBUTE.md  VERSION.md  dev-docs.md
res/: sss.schema.0.0.2.json  sss.schema.json
sss_cli/: __init__.py  __main__.py  _helper.py  _string_template.py  encryption.py  fetch_encrypted.py  helper.py  inject.py  keychain.py  remote.py  share.py  version.py
tests/: sample.encrypted  sample.env  test_symmetric_secrete_share.py
tests/example/: sss.json  target.encrypted  target.env
tests/injection/: sss.json
tests/injection-target/: .sss.json  target.encrypted  target.env
