[tool.poetry]
name = "symmetric-secrete-share"
version = "0.1.0"
description = ""
authors = ["Pablion <36828324+Pablion@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
sss = "sss_cli.__main__:app"
symmetric-secrete-share = "sss_cli.__main__:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
